# beans

./: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  UI_IMPLEMENTATION.md  create_source_files.sh  flake.nix  shell.nix
beans/: Cargo.toml  README.md  SETUP.md  UI_README.md  index.html
beans-lib/: Cargo.toml
beans-lib/examples/: basic_ledger.rs  complete_app.rs  currency_conversion.rs  currency_rs_example.rs  filtering_entries.rs  generating_reports.rs  rusty_money_example.rs  tag_management.rs
beans-lib/src/: error.rs  lib.rs
beans-lib/src/currency/: cache.rs  converter.rs  mod.rs
beans-lib/src/database/: mod.rs  query_helpers.rs  repository.rs  schema.rs  sqlite_repository.rs
beans-lib/src/ledger/: manager.rs  mod.rs
beans-lib/src/models/: currency.rs  entry.rs  mod.rs  tag.rs
beans-lib/src/reporting/: generator.rs  mod.rs  types.rs
beans-lib/tests/: currency_converter_tests.rs  currency_tests.rs  entry_tests.rs  ledger_manager_tests.rs  reporting_tests.rs  sql_query_builder_tests.rs  sqlite_repository_tests.rs  tag_tests.rs
beans-lib/tests/support/: mod.rs
beans/assets/: styles.css
beans/src/: app.rs  commands.rs  lib.rs  main.rs  state.rs  styles.rs
beans/src/components/: bar_chart.rs  date_picker.rs  entry_form.rs  error_dialog.rs  filter_panel.rs  mod.rs  ribbon.rs
beans/src/state/: app_state.rs  mod.rs
beans/src/ui/: entry_form.rs  entry_list.rs  export.rs  mod.rs  overview.rs  ribbon.rs  welcome.rs
beans/src/utils/: chart.rs  mod.rs
beans/src/views/: add_entry.rs  edit_entry.rs  export.rs  ledger_selection.rs  mod.rs  open_ledger.rs  overview.rs
beans/style/: main.css
beans/tauri-conf/: tauri.conf.json
docs/: CUSTOM_REPORTS_GUIDE.md  GETTING_STARTED.md  MULTI_CURRENCY_GUIDE.md  PERSONAL_BUDGET_TUTORIAL.md
examples/: currency_rs_example.rs
source_files_to_add/: README.md
