[workspace]
members = ["beans-lib", "beans"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Beans Contributors"]
license = "MIT"
repository = "https://github.com/yorodm/beans"

[workspace.dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client for currency API
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# UUID for unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal numbers for currency
rust_decimal = { version = "1.33", features = ["serde", "macros"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
once_cell = "1.19"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
