[package]
name = "beans-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Beans ledger application"

[lib]
name = "beans_lib"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rusty-money = { workspace = true }
rust_decimal_macros = "1.39.0"

[dev-dependencies]
env_logger = { workspace = true }
tempfile = "3.8"
wiremock = "0.6"
