[package]
name = "beans"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Beans - A multi-platform ledger application with UI"

[[bin]]
name = "beans"
path = "src/main.rs"

[dependencies]
beans-lib = { path = "../beans-lib" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# UI dependencies
ribir = "0.2.0"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rfd = "0.12.0"  # File dialog
