[package]
name = "beans"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Beans - A multi-platform ledger application with UI"

[[bin]]
name = "beans"
path = "src/main.rs"

[dependencies]
beans-lib = { path = "../beans-lib" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# UI dependencies
freya = "0.3"
freya_native = "0.3"
freya_components = "0.3"
dioxus-hooks = "0.4"
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
rfd = "0.12"  # Native file dialogs
